--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 filelock==3.15.4
+google.generativeai==0.7.2
 gunicorn==23.0.0
 idna==3.7
 jmespath==1.0.1
